# STARMAP

./: README.md  pyproject.toml
examples/: run_tp53.sh
slurm/: starmap_array_example.slurm
src/starmap/: __init__.py  cli.py  io.py
src/starmap/stages/: __init__.py  annotate.py  distances.py  gistar.py  logodds.py  mlp.py  nmf.py  tahoe.py
